--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -1,3 +1,4 @@
+/* Start NavBar */
 .notificationNumberZeyad {
   color: white;
   font-size: 20px;
@@ -16,3 +17,26 @@
   -ms-transform: translate(-60%, -50%);
   -o-transform: translate(-60%, -50%);
 }
+/* End NavBar */
+
+/* Start ReviewItem */
+.gallery div img {
+  width: 100%;
+  border-radius: 20px;
+}
+.gallery .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
+  gap: 20px 20px;
+  margin-top: 20px;
+}
+.gallery .thumbnails img {
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+.gallery .thumbnails img:hover {
+  opacity: 0.8;
+}
+/* End ReviewItem */
