Navbar fix Notification numer

--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -1,21 +1,32 @@
 /* Start NavBar */
-.notificationNumberZeyad {
+.navbar .notificationNumberZeyad {
   color: white;
-  font-size: 20px;
+  /* font-size: 20px; */
   background-color: red;
   display: inline-block;
-  height: 25px;
-  width: 25px;
+  /* height: 25px;
+  width: 25px; */
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  transform: translate(-60%, -50%);
+  /* transform: translate(-60%, -50%);
   -webkit-transform: translate(-60%, -50%);
   -moz-transform: translate(-60%, -50%);
   -ms-transform: translate(-60%, -50%);
-  -o-transform: translate(-60%, -50%);
+  -o-transform: translate(-60%, -50%); */
+  position: absolute;
+  top: -5px;
+  right: 0px;
+  padding: 3px 6px;
+}
+
+@media (max-width: 991px) {
+  .navbar .notificationNumberZeyad {
+    top: -8px;
+    right: -10px;
+  }
 }
 /* End NavBar */
 
