--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -176,20 +176,31 @@ section {
 .Counter {
   padding-top: 20px;
 }
+.head {
+  padding-top: 20px;
+}
 .Counter .sign {
   background-color: #198754;
   color: #fff;
 }
-.container {
+@media (max-width: 450px) {
+  .Counter,
+  .Counter.sign,
+  .Counter.text-number,
+  .img-bottles {
+    font-size: 13px;
+  }
+}
+/* .container {
   position: relative;
-}
-.input-group-text {
-  color: #fff;
-}
-body {
+} */
+/* body {
   background-color: #eee;
+} */
+.edit-item {
+  color: #fff;
+  background-color: #198754;
 }
-
 .center {
   height: 15vh;
   display: inline-block;
@@ -198,83 +209,4 @@ body {
   padding: 35px;
 }
 
-.buttons {
-  /* padding: 10px; */
-  /* background-color: #d6d4d4; */
-  border-radius: 8px;
-  position: relative;
-  padding-left: 70px;
-}
-
-.dot {
-  height: 14px;
-  width: 14px;
-  background-color: green;
-  border-radius: 50%;
-  position: absolute;
-  left: 27%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 8px;
-  color: #fff;
-  opacity: 0;
-}
-
-.cart-button {
-  height: 48px;
-}
-
-.cart-button:focus {
-  box-shadow: none;
-}
-
-.cart {
-  position: relative;
-  height: 48px !important;
-  width: 50px;
-  margin-right: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  padding: 11px;
-  border-radius: 5px;
-  font-size: 21px;
-}
-
-.cart-button.clicked span.dot {
-  animation: item 0.3s ease-in forwards;
-}
-
-@keyframes item {
-  0% {
-    opacity: 1;
-    top: 30%;
-    left: 30%;
-  }
-
-  25% {
-    opacity: 1;
-    left: 26%;
-    top: 0%;
-  }
-
-  50% {
-    opacity: 1;
-    left: 23%;
-    top: -22%;
-  }
-
-  75% {
-    opacity: 1;
-    left: 19%;
-    top: -18%;
-  }
-
-  100% {
-    opacity: 1;
-    left: 14%;
-    top: 28%;
-  }
-} /* end add item */
+/* end add item */
