added the validation functions working on add new admins 80% done

--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -52,6 +52,12 @@ body {
   margin-top: 20px;
   font-size: 20px;
 }
+.AdminsForm .error {
+  color: #962121;
+  margin-bottom: 8px;
+  margin-left: 50px;
+  display: block;
+}
 /* End Admins Page */
 /*  */
 .items h1 {
