--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -241,6 +241,11 @@
   -ms-border-radius: 1.25rem;
   -o-border-radius: 1.25rem;
 }
+.card-img,
+.card-img-top {
+  border-top-left-radius: calc(1.25rem - 1px);
+  border-top-right-radius: calc(1.25rem - 1px);
+}
 @media (max-width: 470px) {
   .card {
     margin-left: -25px;
@@ -274,7 +279,7 @@ ol.item-categories li a {
 }
 
 .profile_scroll::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(200,200,200,1);
+  -webkit-box-shadow: inset 0 0 6px rgba(200, 200, 200, 1);
   border-radius: 5px;
 }
 
