--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -289,3 +289,26 @@ ol.item-categories li a {
   /*-webkit-box-shadow: inset 0 0 6px rgba(90, 90, 90, 0.7);*/
 }
 /* end Scroll bar in user profile */
+/* Start Scroll to top */
+.scroll-to-top {
+  padding: 15px;
+  border-radius: 50px;
+  font-size: 18px;
+  position: fixed;
+  bottom: 15px;
+  right: -50px;
+  line-height: 10px;
+  background-color: #07dd80;
+  color: white;
+  z-index: 10;
+  cursor: pointer;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+.scroll-to-top.scroll-to-top-show {
+  right: 10px;
+}
+/* End Scroll to top */
