Items and categories from database

--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -245,6 +245,7 @@
 .card-img-top {
   border-top-left-radius: calc(1.25rem - 1px);
   border-top-right-radius: calc(1.25rem - 1px);
+  min-height: 300px;
 }
 @media (max-width: 470px) {
   .card {
