--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -59,6 +59,15 @@ body {
   display: block;
 }
 /* End Admins Page */
+/* Start Delete Admin */
+.AdminsForm .delete-box {
+  padding: 30px;
+  border-radius: 10px;
+}
+.AdminsForm .delete-box h3 {
+  margin-bottom: 30px;
+}
+/* End Delete Admin */
 /*  */
 .items h1 {
   margin: 60px 0;
