Navbar notifications and colors of icon and notifications

--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -43,6 +43,14 @@
     width: 500px;
   }
 }
+
+.add-red {
+  color: red;
+}
+.add-white {
+  color: white;
+}
+
 /* End NavBar */
 
 /* Start ReviewItem */
