--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -41,33 +41,49 @@ body {
   background-color: #3b3f42;
   font-weight: 400;
 }
-.AdminsForm h1 {
+.AdminsForm h1,
+.CategoriesForms h1 {
   margin: 50px 0;
   font-weight: bold;
   letter-spacing: 2px;
 }
-.AdminsForm .form-btn {
+.AdminsForm .form-btn,
+.CategoriesForms .form-btn {
   display: block;
   width: 100%;
   margin-top: 20px;
   font-size: 20px;
 }
-.AdminsForm .error {
+.AdminsForm .error,
+.CategoriesForms .error {
   color: #962121;
   margin-bottom: 8px;
   margin-left: 50px;
   display: block;
 }
-/* End Admins Page */
-/* Start Delete Admin */
-.AdminsForm .delete-box {
+.AdminsForm .delete-box,
+.CategoriesForms .delete-box {
   padding: 30px;
   border-radius: 10px;
 }
-.AdminsForm .delete-box h3 {
+.AdminsForm .delete-box h3,
+.CategoriesForms .delete-box h3 {
   margin-bottom: 30px;
 }
-/* End Delete Admin */
+/* End Admins Page */
+
+/* Start Category */
+.category h1 {
+  margin: 60px 0;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+.category .add-btn {
+  display: block;
+  width: fit-content;
+  margin: 15px auto;
+}
+/* End Category */
 /*  */
 .items h1 {
   margin: 60px 0;
