--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -69,7 +69,8 @@ body {
 }
 .AdminsForm .delete-box,
 .CategoriesForms .delete-box,
-.Users .delete-box {
+.Users .delete-box,
+.ItemsForm .delete-box {
   padding: 30px;
   border-radius: 10px;
   width: fit-content;
@@ -81,7 +82,8 @@ body {
   margin-bottom: 30px;
 }
 /* End Admins Page */
-/*  */
+
+/* Start Items */
 .items h1 {
   margin: 60px 0;
   font-weight: bold;
@@ -90,6 +92,9 @@ body {
 .items thead .table-dark {
   background-color: #3b3f42;
   font-weight: 400;
+}
+.ItemsForm {
+  margin-top: 50px;
 }
 .ItemsForm h1 {
   margin: 50px 0;
@@ -102,4 +107,86 @@ body {
   margin-top: 20px;
   font-size: 20px;
 }
-/*  */
+.review-item {
+  padding: 70px;
+  display: grid;
+  grid-template-columns: 0.7fr 1fr;
+  column-gap: 100px;
+}
+@media (max-width: 992px) {
+  .review-item {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .review-item {
+    grid-template-columns: 1fr;
+  }
+}
+.gallery div img {
+  width: 100%;
+  border-radius: 20px;
+}
+.gallery .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+}
+.gallery .thumbnails img {
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+.gallery .thumbnails img:hover {
+  opacity: 0.8;
+}
+.product {
+  padding-top: 40px;
+}
+.product .seller-name {
+  color: #212529;
+  text-decoration: none;
+  font-weight: 700;
+  letter-spacing: 1.7px;
+  font-size: 16px;
+}
+.product .date-of-item {
+  position: relative;
+  top: -17px;
+  font-size: 12px;
+  float: right;
+}
+.product .item-name {
+  font-weight: 700;
+  font-size: 30px;
+  display: block;
+  margin-bottom: 20px;
+}
+.product .description {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+.product .price .new-price {
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+.product .price .discount {
+  background-color: hsl(25, 100%, 94%);
+  display: inline;
+  margin-left: 10px;
+  padding: 5px;
+  border-radius: 7px;
+  align-items: center;
+  letter-spacing: 1px;
+  font-size: 13px;
+  font-weight: 600;
+}
+.product .price .old-price {
+  font-size: small;
+  text-decoration: line-through;
+}
+/* End Item */
