--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -189,4 +189,8 @@ body {
   font-size: small;
   text-decoration: line-through;
 }
+.product .loctaion {
+  font-size: 20px;
+  margin: 30px 0;
+}
 /* End Item */
