--- a/layout/css/frontend.css
+++ b/layout/css/frontend.css
@@ -366,3 +366,26 @@ ol.item-categories li a {
 }
 
 /* End Footer */
+/* Start homepage */
+.main-page .price .new-price {
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+.main-page .price .discount {
+  background-color: hsl(25, 100%, 94%);
+  display: inline;
+  margin-left: 10px;
+  padding: 5px;
+  border-radius: 7px;
+  align-items: center;
+  letter-spacing: 1px;
+  font-size: 13px;
+  font-weight: 600;
+}
+.main-page .price .old-price {
+  font-size: small;
+  text-decoration: line-through;
+}
+/* End homepage */
